--- a/index.html
+++ b/index.html
@@ -127,12 +127,105 @@
         </div>
       </div>
     </header>
+    <!-- Intro -->
+
+    <!-- Image need to uniform -->
+    <section class="bg-dark" id="introduction">
+      <div class="container-fluid">
+        <div id="introSlider" class="carousel slide" data-ride="carousel">
+          <div class="col-8 offset-2">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li
+                data-target="#introSlider"
+                data-slide-to="0"
+                class="active"
+              ></li>
+              <li data-target="#introSlider" data-slide-to="1"></li>
+              <li data-target="#introSlider" data-slide-to="2"></li>
+              <li data-target="#introSlider" data-slide-to="3"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  class="center-block"
+                  src="img/white_grapes.jpg"
+                  alt="white grape"
+                />
+                <div class="carousel-caption">
+                  <h3>New York</h3>
+                  <p>We love the Big Apple!</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="center-block"
+                  src="img/red_grapes.jpg"
+                  alt="red grape"
+                />
+                <div class="carousel-caption">
+                  <h3>Lorem ipsum dolor, sit amet</h3>
+                  <p>Lorem ipsum dolor, sit amet</p>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="carousel-content">
+                  <div>
+                    <h3>Chicago</h3>
+                    <p>Thank you, Chicago!</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="carousel-content">
+                  <div>
+                    <h3>Winery</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Nobis repudiandae quidem iste harum! Laudantium
+                      dignissimos veniam esse necessitatibus enim? Harum
+                      distinctio consequatur possimus minus repudiandae
+                      architecto optio numquam ducimus rem!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- End of item -->
+          </div>
+
+          <!-- Left and right controls -->
+          <a
+            class="carousel-control-prev"
+            href="#introSlider"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#introSlider"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </section>
 
     <!-- Intro -->
-    <section id="introduction">
+    <section id="introduction2">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 text-center">
+          <div class="col text-center">
             <h2 class="section-heading text-uppercase">Origin</h2>
             <h3 class="section-subheading text-muted">
               Lorem ipsum dolor sit amet consectetur.
@@ -144,7 +237,7 @@
               dolor quos esse, commodi adipisci alias tenetur.
             </p>
           </div>
-          <div class="col-lg-3 text-center">
+          <div class="col text-center">
             <h2 class="section-heading text-uppercase">
               Type of Grape (Variety)
             </h2>
@@ -158,19 +251,7 @@
               dolor quos esse, commodi adipisci alias tenetur.
             </p>
           </div>
-          <div class="col-lg-3 text-center">
-            <h2 class="section-heading text-uppercase">Winery</h2>
-            <h3 class="section-subheading text-muted">
-              Lorem ipsum dolor sit amet consectetur.
-            </h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-              consectetur rem, laborum, provident ducimus cumque reprehenderit
-              dolorem, debitis tempore adipisci molestiae. Tempore cupiditate
-              dolor quos esse, commodi adipisci alias tenetur.
-            </p>
-          </div>
-          <div class="col-lg-3 text-center">
+          <div class="col text-center">
             <h2 class="section-heading text-uppercase">Wine Terrior</h2>
             <h3 class="section-subheading text-muted">
               Lorem ipsum dolor sit amet consectetur.
@@ -1152,5 +1233,6 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/main.js"></script>
+    <script src="js/carouselHeight.js"></script>
   </body>
 </html>
