--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >Start Bootstrap</a
+          >What With Wine</a
         >
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -68,22 +68,22 @@
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services"
-                >Services</a
+                >Introduction</a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio"
-                >Portfolio</a
+                >Dataset</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Discovery 1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#team">Discovery 2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Discovery 3</a>
             </li>
           </ul>
         </div>
@@ -130,7 +130,7 @@
     <!-- Intro -->
 
     <!-- Image need to uniform -->
-    <section class="bg-dark" id="introduction">
+    <section class="bg-secondary" id="introduction">
       <div class="container-fluid">
         <div id="introSlider" class="carousel slide" data-ride="carousel">
           <div class="col-8 offset-2">
