--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </h3>
         </div>
         <div class="row">
-          <div class="col-lg">
+          <div class="col">
             <div id="heatmapPricePointCountry"></div>
           </div>
         </div>
