--- a/test/index.html
+++ b/test/index.html
@@ -49,7 +49,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">HOME</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"
+          >HOME</a
+        >
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -105,7 +107,7 @@
           <a
             class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
             href="#introduction"
-            >tell me more</a
+            >tell me more.</a
           >
           <div class="pad20"></div>
           <a
@@ -131,182 +133,148 @@
         </div>
       </div>
     </header>
-    <!-- Intro -->
+  
 
     <!-- Intro -->
-    <section id="introduction">
+    <section id="introduction2">
       <div class="container">
         <div class="row">
           <div class="col text-center">
             <h2 class="section-heading text-uppercase">History of Wine</h2>
-            <p>
-              <br />
-              Although no exact date were known, archeologists have found traces
-              of wine as early as 6000BC at Georgia, 5000BC in Iran and 7000BC
-              in China. The earliest winery however were only known as early as
-              6100BC in Armenia called Areni-1 winery. Wine played an important
-              role in ancient history both in culutral such as Greece and Rome
-              as well as Religion such as Judaism and Kiddush.
-            </p>
+            <h3 class="section-subheading text-muted">
+          
+            </h3>
+            <p>Although no exact date were known, archeologists have found traces of wine as early as 6000BC at Georgia, 5000BC in Iran
+            and 7000BC in China.
+            The earliest winery however were only known as early as 6100BC in Armenia called Areni-1 winery. Wine played an
+            important role in ancient history both in culutral such as Greece and Rome as well as Religion such as Judaism and
+            Kiddush.
+             </p>
           </div>
           <div class="col text-center">
             <h2 class="section-heading text-uppercase">
-              How It's Made
+              How It's Made 
             </h2>
-
+            <h3 class="section-subheading text-muted">
+          
+            </h3>
             <p>
-              <br /><br /><br />
-              It is produced through the process of fermentation of grapes.
-              Yeast is added into the mixture and it consumes sugar in the
-              grapes and convert it to ethanol,co2 and heat. Different mixture
-              of grapes and yeast creates different type of wine. That's what
-              makes wine special because there is no right or wrong way to make
-              one.
+            It is produced through the process of fermentation of grapes.
+            Yeast is added into the mixture and it consumes sugar in the grapes and convert it to ethanol,co2 and heat.
+            Different mixture of grapes and yeast creates different type of wine. That's what makes wine special because there is no
+            right or wrong way to make one.
             </p>
           </div>
           <div class="col text-center">
-            <h2 class="section-heading text-uppercase">
-              Type of Grape (Variety)
-            </h2>
-
+            <h2 class="section-heading text-uppercase">Type of Grape (Variety)</h2>
+            <h3 class="section-subheading text-muted">
+              top grapes in winery 
+            </h3>
             <p>
-              <br />
-              <B>Black/Red:</B> Cabernet Franc, Cabernet Sauvignon,Carmenere,
-              Grenache, Malbec, Merlot, Nebbiolo, Pinotage, Pinot Grigio, Pinot
-              Noir, Shiraz, Tempranillo, Zinfandel <br /><br />
-              <B>White:</B> Chardonnay, Gewurztraminer, Muscat Ottonel,
-              Riesling, Sauvignon Blanc, Semillon, Viognier
-            </p>
+
+              <B>Black/Red:</B> Cabernet Franc, Cabernet Sauvignon,Carmenere, Grenache, Malbec, Merlot, Nebbiolo, Pinotage, Pinot Grigio, Pinot Noir, Shiraz, Tempranillo, Zinfandel
+              <br><br>    
+             <B>White:</B>  Chardonnay, Gewurztraminer, Muscat Ottonel, Riesling, Sauvignon Blanc, Semillon, Viognier
+
+
+              </p>
           </div>
         </div>
       </div>
     </section>
+  <!-- Intro -->
+
     <!-- Image need to uniform -->
-    <section class="bg-secondary" id="introduction2">
-      <div class="container-fluid">
-        <div id="introSlider" class="carousel slide" data-ride="carousel">
-          <div class="col-6 offset-3">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li
-                data-target="#introSlider"
-                data-slide-to="0"
-                class="active"
-              ></li>
-              <li data-target="#introSlider" data-slide-to="1"></li>
-              <li data-target="#introSlider" data-slide-to="2"></li>
-              <li data-target="#introSlider" data-slide-to="3"></li>
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="carousel-content">
-                  <div class="row">
-                    <h2>Fun Fact 1</h2>
+    <section class="bg-secondary" id="introduction">
+        <div class="container-fluid">
+          <div id="introSlider" class="carousel slide" data-ride="carousel">
+            <div class="col-8 offset-2">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#introSlider"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#introSlider" data-slide-to="1"></li>
+                <li data-target="#introSlider" data-slide-to="2"></li>
+                <li data-target="#introSlider" data-slide-to="3"></li>
+              </ol>
+  
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    class="center-block"
+                    src="img/white_grapes.jpg"
+                    alt="white grape"
+                  />
+                  <div class="carousel-caption">
+                    <h3>New York</h3>
+                    <p>We love the Big Apple!</p>
                   </div>
-                  <div class="row">
-                    <p>
-                      <br /><br />
-                      Although wines are made of grapes it is not the same ones
-                      you find at your local groceries!
-                    </p>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    class="center-block"
+                    src="img/red_grapes.jpg"
+                    alt="red grape"
+                  />
+                  <div class="carousel-caption">
+                    <h3>Lorem ipsum dolor, sit amet</h3>
+                    <p>Lorem ipsum dolor, sit amet</p>
+                  </div>
+                </div>
+  
+                <div class="carousel-item">
+                  <div class="carousel-content">
+                    <div>
+                      <h3>Chicago</h3>
+                      <p>Thank you, Chicago!</p>
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="carousel-item">
+                  <div class="carousel-content">
+                    <div>
+                      <h3>Winery</h3>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nobis repudiandae quidem iste harum! Laudantium
+                        dignissimos veniam esse necessitatibus enim? Harum
+                        distinctio consequatur possimus minus repudiandae
+                        architecto optio numquam ducimus rem!
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="carousel-content">
-                  <div class="row">
-                    <h2>Fun Fact 2</h2>
-                  </div>
-                  <div class="row text-center">
-                    <img
-                      id="glass-cheers"
-                      class="img-fluid"
-                      src="img/cheers.jpg"
-                      alt="cheers"
-                    />
-                    <p>
-                      The custom of bumping glasses with "cheers" greeting came
-                      from old rome.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="carousel-content">
-                  <div class="row">
-                    <h2>Fun Fact 3</h2>
-                  </div>
-                  <div class="row text-center">
-                    <p>
-                      <br /><br />
-                      Red and white wines are kept in the same controlled
-                      temperature, but is consumed at different temperature.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="carousel-content">
-                  <div class="row">
-                    <h2>Fun Fact 4</h2>
-                  </div>
-                  <div class="row">
-                    <p>
-                      <br />
-                      A single vine of grapes can produce as much as 10 bottles
-                      of wine!
-                    </p>
-                    <img src="img/grape.jpg" class="grapes img-fluid" />
-                    <img src="img/bottle.jpg" class="bottles img-fluid" />
-                    <img src="img/bottle.jpg" class="bottles img-fluid" /><img
-                      src="img/bottle.jpg"
-                      class="bottles img-fluid"
-                    />
-                    <img src="img/bottle.jpg" class="bottles img-fluid" /><img
-                      src="img/bottle.jpg"
-                      class="bottles img-fluid"
-                    />
-                    <img src="img/bottle.jpg" class="bottles img-fluid" /><img
-                      src="img/bottle.jpg"
-                      class="bottles img-fluid"
-                    />
-                    <img src="img/bottle.jpg" class="bottles img-fluid" /><img
-                      src="img/bottle.jpg"
-                      class="bottles img-fluid"
-                    />
-                    <img src="img/bottle.jpg" class="bottles img-fluid" />
-                  </div>
-                </div>
-              </div>
+              <!-- End of item -->
             </div>
-            <!-- End of item -->
+  
+            <!-- Left and right controls -->
+            <a
+              class="carousel-control-prev"
+              href="#introSlider"
+              role="button"
+              data-slide="prev"
+            >
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#introSlider"
+              role="button"
+              data-slide="next"
+            >
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-
-          <!-- Left and right controls -->
-          <a
-            class="carousel-control-prev"
-            href="#introSlider"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#introSlider"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
-      </div>
-    </section>
-
+      </section>
     <section id="cheapVSexpensive">
       <div class="container">
         <div class="row">
@@ -437,12 +405,12 @@
               The Biggest Wine Producer?
             </h2>
             <h3 class="section-subheading text-muted">
-              France
+              It is!
             </h3>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-2 text-center">
+          <div class="col-lg-4 text-center">
             <h4>The correlation between price and points given</h4>
 
             <p>
@@ -452,8 +420,17 @@
               dolor quos esse, commodi adipisci alias tenetur.
             </p>
           </div>
-          <div class="col-lg-10 text-center">
-            <div id="wineryBar"></div>
+          <div class="col-lg-8 text-center">
+            <h2 class="section-heading text-uppercase">Graph</h2>
+            <h3 class="section-subheading text-muted">
+              Lorem ipsum dolor sit amet consectetur.
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
+              consectetur rem, laborum, provident ducimus cumque reprehenderit
+              dolorem, debitis tempore adipisci molestiae. Tempore cupiditate
+              dolor quos esse, commodi adipisci alias tenetur.
+            </p>
           </div>
         </div>
       </div>
@@ -495,19 +472,18 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Wine Cellar</h2>
+            <h2 class="section-heading text-uppercase">Services</h2>
             <h3 class="section-subheading text-muted">
-              Having a wine cellar nowadays is a status symbol
+              Lorem ipsum dolor sit amet consectetur.
             </h3>
           </div>
         </div>
         <div class="row text-center">
           <div class="col-md-4">
-            <img
-              class="rounded-circle img-fluid"
-              src="img/wine-cellar1.jpg"
-              alt="wine cellar"
-            />
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            </span>
             <h4 class="service-heading">E-Commerce</h4>
             <p class="text-muted">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
@@ -516,11 +492,10 @@
             </p>
           </div>
           <div class="col-md-4">
-            <img
-              class="rounded-circle img-fluid"
-              src="img/wine-cellar2.jpg"
-              alt="wine cellar"
-            />
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
             <h4 class="service-heading">Responsive Design</h4>
             <p class="text-muted">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
@@ -529,11 +504,10 @@
             </p>
           </div>
           <div class="col-md-4">
-            <img
-              class="rounded-circle img-fluid"
-              src="img/wine-cellar3.jpg"
-              alt="wine cellar"
-            />
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            </span>
             <h4 class="service-heading">Web Security</h4>
             <p class="text-muted">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
@@ -541,11 +515,6 @@
               impedit.
             </p>
           </div>
-        </div>
-        <div class="col-md-4 offset-md-9">
-          <p class="text-muted">
-            source:https://www.ft.com/content/0e96b926-d347-11e6-b06b-680c49b4b4c0
-          </p>
         </div>
       </div>
     </section>
@@ -1514,6 +1483,5 @@
     <script src="js/carouselHeight.js"></script>
     <script src="js/heatmapPricePointCountry.js"></script>
     <script src="js/pricePointGraph.js"></script>
-    <script src="js/winerybar.js"></script>
   </body>
 </html>
