--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="intro-text">
           <div class="intro-lead-in">WHAT IS WINE?</div>
           <div class="intro-heading text-uppercase">
-            What makes wine great?
+            What makes wine unique?
           </div>
           <a
             class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
@@ -203,12 +203,12 @@
               <div class="carousel-item active">
                 <div class="carousel-content">
                   <div class="row">
-                    <h2>Fun Fact 1</h2>
+                    <h2>fun fact 1</h2>
                   </div>
                   <div class="row">
                     <p>
                       <br /><br />
-                      Although wines are made of grapes it is not the same ones
+                      the grapes used to make wines are not the same one as
                       you find at your local groceries!
                     </p>
                   </div>
@@ -217,7 +217,7 @@
               <div class="carousel-item">
                 <div class="carousel-content">
                   <div class="row">
-                    <h2>Fun Fact 2</h2>
+                    <h2>fun fact 2</h2>
                   </div>
                   <div class="row text-center">
                     <img
@@ -227,7 +227,7 @@
                       alt="cheers"
                     />
                     <p>
-                      The custom of bumping glasses with "cheers" greeting came
+                      the custom of bumping glasses with "cheers" greeting came
                       from old rome.
                     </p>
                   </div>
@@ -236,12 +236,12 @@
               <div class="carousel-item">
                 <div class="carousel-content">
                   <div class="row">
-                    <h2>Fun Fact 3</h2>
+                    <h2>fun fact 3</h2>
                   </div>
                   <div class="row text-center">
                     <p>
                       <br /><br />
-                      Red and white wines are kept in the same controlled
+                      red and white wines are kept in the same controlled
                       temperature, but is consumed at different temperature.
                     </p>
                   </div>
@@ -250,12 +250,12 @@
               <div class="carousel-item">
                 <div class="carousel-content">
                   <div class="row">
-                    <h2>Fun Fact 4</h2>
+                    <h2>fun fact 4</h2>
                   </div>
                   <div class="row">
                     <p>
                       <br />
-                      A single vine of grapes can produce as much as 10 bottles
+                      a single vine of grapes can produce as much as 10 bottles
                       of wine!
                     </p>
                     <img src="img/grape.jpg" class="grapes img-fluid" />
@@ -363,11 +363,9 @@
       <div class="container-fluid text-center">
         <div class="col-lg text-center">
           <h2 class="section-heading text-uppercase">
-            Country &harr; Price &harr; Points
+            Countries with the best wines!
           </h2>
-          <h3 class="section-subheading text-muted">
-            ISI LA SENDIRI
-          </h3>
+
         </div>
         <div class="row">
           <div class="col">
@@ -377,21 +375,18 @@
         <div class="container">
           <div class="row">
             <div class="col-lg text-center">
-              <h4>The correlation between price and points given</h4>
+              <h4>price vs points</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-                consectetur rem, laborum, provident ducimus cumque reprehenderit
-                dolorem, debitis tempore adipisci molestiae. Tempore cupiditate
-                dolor quos esse, commodi adipisci alias tenetur.
+                <B>Fact:</B> Only 6 countries manage to produce the best wine. The cheapest one being a tad over 90$ and the most expensive being just a shy under 1000$.
+                <i>So don't wine if you've been paying top dollars for something that is as good as the 90 dollar bottle</i>
+                <br>
               </p>
             </div>
             <div class="col-lg text-center">
-              <h4>The correlation between price and points given</h4>
+              <h4>not all wines are about taste</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-                consectetur rem, laborum, provident ducimus cumque reprehenderit
-                dolorem, debitis tempore adipisci molestiae. Tempore cupiditate
-                dolor quos esse, commodi adipisci alias tenetur.
+                Although when talking about wine, taste is what comes to mind, herritage also plays a big role in determining the price. Some are paying more for the name brand instead of the taste.
+
               </p>
             </div>
           </div>
@@ -404,22 +399,22 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">
-              Does Expensive Wine Taste Better?
+              The pricier, the tastier?
             </h2>
-            <h3 class="section-subheading text-muted">
-              It is!
-            </h3>
+
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 text-center">
-            <h4>The correlation between price and points given</h4>
+            <h4>Are you getting what you paid for?</h4>
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-              consectetur rem, laborum, provident ducimus cumque reprehenderit
-              dolorem, debitis tempore adipisci molestiae. Tempore cupiditate
-              dolor quos esse, commodi adipisci alias tenetur.
+                The chart shows a stong correlation between the quality of wine and the price. In general, it is accepted that the pricier the wine, the tastier it is.
+                However, the point increment gap gets significantly decreases after 50$ mark. Therefore, new-drinkers are advised to stay under 50$ as it is the most value for money option available.
+  
+              <br><br>
+              X axis-Price<br>
+              Y axis-Points
             </p>
           </div>
           <div class="col-lg-8 text-center">
@@ -434,7 +429,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">
-              The Biggest Wine Producer?
+              WINERY HEAVEN? 
             </h2>
             <h3 class="section-subheading text-muted">
               France
@@ -443,13 +438,12 @@
         </div>
         <div class="row">
           <div class="col-lg-2 text-center">
-            <h4>The correlation between price and points given</h4>
+            <h4>Countries with the most wineries</h4>
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-              consectetur rem, laborum, provident ducimus cumque reprehenderit
-              dolorem, debitis tempore adipisci molestiae. Tempore cupiditate
-              dolor quos esse, commodi adipisci alias tenetur.
+              Based on the dataset, majority of the winery are located in the United States. MAKE WINE GRAPE AGAIN! <br>
+              However, most of the reviews comes from the US, hence data might be biased. According to <i>bussinesstech.co.za</i>, Italy seems to be the leader at having the most winery.<br>
+            
             </p>
           </div>
           <div class="col-lg-10 text-center">
