--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
           <a
             class="btn btn-primary btn-l text-uppercase js-scroll-trigger"
             href="#graph1"
-            >Graph1</a
+            >Country</a
           >
           <a
             class="btn btn-primary btn-l text-uppercase js-scroll-trigger"
             href="#graph2"
-            >Graph2</a
+            >Price</a
           >
           <a
             class="btn btn-primary btn-l text-uppercase js-scroll-trigger"
             href="#graph3"
-            >Graph3</a
+            >Winery</a
           >
           <a
             class="btn btn-primary btn-l text-uppercase js-scroll-trigger"
             href="#graph4"
-            >Graph4</a
+            >Variety</a
           >
         </div>
       </div>
@@ -466,7 +466,7 @@
       <div class="container-fluid text-center">
         <div class="col-lg text-center">
           <h2 class="section-heading text-uppercase">
-            Variety HEAVEN?
+            Too Much Variety
           </h2>
         </div>
         <div class="row">
@@ -477,15 +477,16 @@
         <div class="container">
           <div class="row">
             <div class="col text-center">
-              <h4>TITITITITITII</h4>
+              <h4>The Popular</h4>
               <p>
-                LALALALALALALAALAAL
+                Pinot Noir, Chardonnay, Cabernet Sauvignon, Red Blend, Bordeaux-style Red Blend. <br>
+                Grapes here <br> Grapes There <br> Grapes Everywhere <br> I'm the grape
               </p>
             </div>
             <div class="col-lg text-center">
-              <h4>TITITITITTITITITI</h4>
+              <h4>Experience It</h4>
               <p>
-                LALALALALALALALALAL
+                When it comes to selecting the right grapes, there isn't are right or wrong way. Its all about getting the taste you desire. However, there are certain grapes that are used widely in the industry that has created good tasting wine. You may also use table grapes but the taste may not be what you looking for
               </p>
             </div>
           </div>
